@@ -1,3 +1,11 @@
+2005-02-10  Darin Adler  <darin@apple.com>
+
+        "Reviewed" by Richard (he told me the file was obsolete).
+
+        - got rid of an obsolete file
+
+        * bindings/npsap.h: Removed.
+
 === Safari-185 ===
 
 === Safari-183 ===
